changes made after meeting with the client

--- a/CONTACT.HTML
+++ b/CONTACT.HTML
@@ -1,14 +1,12 @@
-<DOCTYPE html>
+<DOCTYPE htnl>
 	<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>index ticket</title>
+		<title>contact us</title>
 	</head>
 	<body>
-	<h1>homepage of ticket app</h1>
-	<p>the red rail line has just been
-	launched, enjoy the ride </p>
+	
 	</body>
 	</html>
